rawlings-demo/force-app/main/default/objects/Settlement__c/Settlement__c.object-meta.xml
<CustomObject>
    <label>Settlement</label>
    <nameField>
        <label>Settlement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Settlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>