rawlings-demo/force-app/main/default/objects/Settlement__c/fields/Administrator__c.field-meta.xml
<CustomField>
    <fullName>Administrator__c</fullName>
    <label>Administrator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>