rawlings-demo/force-app/main/default/objects/Settlement__c/fields/Response_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Response_Window_Days__c</fullName>
    <label>Response Window Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>